# AI-trader

./: .gitignore  package-lock.json
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/middleware/: auth.py
backend/app/routes/: analysis.py  profile.py
backend/app/services/: analysis_service.py  supabase_client.py
backend/eval_results/None/TradingAgentsStrategy_logs/: full_states_log_2026-01-30.json
backend/supabase/migrations/: 001_init.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/public/eval_results/NVDA/TradingAgentsStrategy_logs/: full_states_log_2026-01-30.json
frontend/public/eval_results/None/TradingAgentsStrategy_logs/: full_states_log_2026-02-03.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/[id]/: page.tsx
frontend/src/app/api/analysis/: route.ts
frontend/src/app/api/analysis/[id]/: route.ts
frontend/src/app/history/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/app/process/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: AnalysisCard.tsx  BottomNav.tsx  DecisionBadge.tsx  Onboarding.tsx  ProgressTracker.tsx  ReportSection.tsx  StatusBadge.tsx
frontend/src/data/: static-analyses.json  strategy-data.ts
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: api.ts  mock.ts  types.ts
